--- a/static/css/record.css
+++ b/static/css/record.css
@@ -1,14 +1,34 @@
-.pos {
-    width: 20px;
-    text-align: center;
+body {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    background: #A9CFFF;
 }
 
-.rec {
-    width: 30px;
-    text-align: center;
+/*
+h3 {
+    margin-top: 10px;
+}
+.row {
+    margin: 10px;
+    padding: 0px;
+    height: 320px;
 }
 
-.res {
-    width: 20px;
-    text-align: center;
+.text-area {
+    display: inline-block;
+    width: 50%;
+    float: left;
 }
+
+.jumbotron {
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 20px;
+    padding-bottom: 30px;
+}
+
+.box-title {
+    display: inline-block;
+    vertical-align: middle;
+}
+*/
