--- a/templates/index.html
+++ b/templates/index.html
@@ -18,10 +18,12 @@
     <div class="container">
         <div class="navbar navbar-default" role="navigation">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#">Baseball Record Parser</a>
+                <div class="navbar-brand">Baseball Record Parser</div>
             </div>
-            <div class="navbar">
-                author
+            <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="http://google.com">author</a></li>
+                </ul>
             </div>
         </div>
         <div class="jumbotron">
