--- a/templates/index.html
+++ b/templates/index.html
@@ -28,18 +28,45 @@
         </div>
         <div class="jumbotron">
             <div class="row">
+                <div class="column"> 
+                    <div class="text-area">
+                        <h3 class="box-title">Team1</h3>
+                        <textarea class="form-control" id="team1" rows="12"></textarea>
+                    </div>
+                    <div class="text-area">
+                        <h3 class="box-title">Team2</h3>
+                        <textarea class="form-control" id="team2" rows="12"></textarea>
+                    </div>
+                </div>
+                <div class="controller"> 
+                    <div class="controller-buttons">
+                        <input type="button" class="btn btn-info" id="parse" value="=>">
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="text-area">
+                        <h3 class="box-title">Output</h3>
+                        <textarea class="form-control" id="output" rows="27"></textarea>
+                    </div>
+                </div>
+            </div>
+            <!--
+            <div class="row">
                 <div class="text-area">
                     <h3 class="box-title">Input</h3>
-                    <input type="button" value="test">
                     <textarea class="form-control" id="input" rows="12"></textarea>
                 </div>
-                
+                <div class="controller"> 
+                    <div class="controller-buttons">
+                        <input type="button" class="btn btn-info" id="parse" value="=>">
+                    </div>
+                </div>
                 <div class="text-area">
                     <h3 class="box-title">Output</h3>
                     <textarea class="form-control" id="output" rows="12"></textarea>
                 </div>
             </div>
-            <input type="button" id="enter" value="輸入">
+            -->
         </div>
     </div>
 
