--- a/templates/index.html
+++ b/templates/index.html
@@ -4,20 +4,24 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="author" content="phoenix04104">
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css" rel="stylesheet">
+	
+    <title>Baseball Record</title>
+    
+    <link rel="shortcut icon" href="/static/image/bat.jpg">
+
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/css/bootstrap-theme.min.css" rel="stylesheet">
     <link href="/static/css/record.css" rel="stylesheet">
     <link href="/static/css/jquery-linedtextarea.css" rel="stylesheet">
-	<title>Baseball Record</title>
 
-</head>
-<body>
     <script src="/static/js/jquery-1.11.1.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+    <script src="/static/js/bootstrap.min.js"></script>
     <script src="/static/js/record.js"></script>
     <script src="/static/js/jquery-linedtextarea.js"></script>
+</head>
+<body>
     
-    
+<!--  header  -->    
     <div class="container">
         <div class="navbar navbar-default" role="navigation">
             <div class="navbar-header">
@@ -31,26 +35,121 @@
         </div>
     </div>
 
+<!--  content  -->
     <div class="container">
-        <div class="jumbotron">
+
+        <form action='/' method="POST">
+
+    		<div class="row">
+    			<div class="col-md-4 col-md-offset-4">	
+    				<table class="table table-condensed table-bordered table-hover">
+    					<tbody>
+    						<tr>
+    							<th>聯賽</th>
+    							<th><input type="text" name="game_type" value="{{game_type}}"></th>
+    						</tr>
+    						<tr>
+    							<th>日期</th>
+    							<th><input type="date" name="date" value="{{date}}"></th>
+    						</tr>
+    						<tr>
+    							<th>地點</th>
+    							<th><input type="text" name="location" value="{{location}}"></th>
+    						</tr>
+    						<tr>
+    							<th>場次</th>
+    							<th><input type="number" name="game_id" value="{{game_id}}"><br></th>
+    						</tr>
+    					</tbody>
+    				</table>
+    			</div>	
+    		</div>
+    
+    
+    		<div class="row table-title warning">
+    			{{warning}}
+    		</div>
+    
             <div class="row">
                 <div class="col-md-6"> 
-                    <textarea class="record_table lined" name="team1" rows="12"></textarea>
+                    <div class="title">
+                        AWAY
+                    </div>
+            	    <table class="table table-condensed table-bordered table-hover">
+    				    <thead>
+    					    <tr>
+    						    <th>隊伍</th>
+        						<th>1</th>
+    	    					<th>2</th>
+    		   					<th>3</th>
+    		    				<th>4</th>
+    			    			<th>5</th>
+    				    		<th>6</th>
+    					    	<th>7</th>
+        					</tr>
+    	    			</thead>
+    		   			<tbody>
+    		    			<tr>
+    			    			<th><input type="text" size="6" name="away_team_name" value="{{away_team_name}}"></th>
+    				    		<th><input type="text" size="1" name="away_score1" value="{{away_score_1}}"</th>
+    					    	<th><input type="text" size="1" name="away_score2" value="{{away_score_2}}"</th>
+    						    <th><input type="text" size="1" name="away_score3" value="{{away_score_3}}"</th>
+        						<th><input type="text" size="1" name="away_score4" value="{{away_score_4}}"</th>
+    	    					<th><input type="text" size="1" name="away_score5" value="{{away_score_5}}"</th>
+    		   					<th><input type="text" size="1" name="away_score6" value="{{away_score_6}}"</th>
+    		    				<th><input type="text" size="1" name="away_score7" value="{{away_score_7}}"</th>
+    			    		</tr>
+    				    </tbody>
+        			</table>
+    
+                    <textarea class="record_table lined" name="away_record" rows="12">{{away_record}}</textarea>
                 </div>
+    
+    
                 <div class="col-md-6"> 
-                    <textarea class="record_table lined" name="team2" rows="12"></textarea>
+                    <div class="title">
+                        HOME
+                    </div>
+        			<table class="table table-condensed table-bordered table-hover">
+    	    			<thead>
+    		   				<tr>
+    		    				<th>隊伍</th>
+    			    			<th>1</th>
+    				    		<th>2</th>
+    					    	<th>3</th>
+    						    <th>4</th>
+        						<th>5</th>
+    	    					<th>6</th>
+    		   					<th>7</th>
+    		    			</tr>
+    			    	</thead>
+    				    <tbody>
+        					<tr>
+        						<th><input type="text" size="6" name="home_team_name" value="{{home_team_name}}"></th>
+    	    					<th><input type="text" size="1" name="home_score1" value="{{home_score_1}}"</th>
+    		   					<th><input type="text" size="1" name="home_score2" value="{{home_score_2}}"</th>
+    		    				<th><input type="text" size="1" name="home_score3" value="{{home_score_3}}"</th>
+    			    			<th><input type="text" size="1" name="home_score4" value="{{home_score_4}}"</th>
+    				    		<th><input type="text" size="1" name="home_score5" value="{{home_score_5}}"</th>
+    					    	<th><input type="text" size="1" name="home_score6" value="{{home_score_6}}"</th>
+    						    <th><input type="text" size="1" name="home_score7" value="{{home_score_7}}"</th>
+        				</tbody>
+    	    		</table>
+    
+                    <textarea class="record_table lined" name="home_record" rows="12">{{home_record}}</textarea>
                 </div>
-            </div>
-
-            <br>
-
-            <div class="row">
+             </div>
+    
+             <br>
+    
+             <div class="row">
                 <div class="center-block">
-				    <input type="submit" class="btn btn-primary" name="preview" value="預覽">
-				    <input type="submit" class="btn btn-success" name="download" value="下載">
+                    <input type="submit" class="btn btn-primary" name="preview" value="預覽">
+    				<input type="submit" class="btn btn-success" name="download" value="下載">
                 </div>
             </div>
-        </div>
+
+        </form>
     </div>
 
 </body>
