send data to parser

--- a/templates/index.html
+++ b/templates/index.html
@@ -91,13 +91,13 @@
     		   			<tbody>
     		    			<tr>
     			    			<th><input type="text" size="6" name="away_team_name" value="{{away_team_name}}"></th>
-    				    		<th><input type="text" size="1" name="away_score1" value="{{away_score_1}}"</th>
-    					    	<th><input type="text" size="1" name="away_score2" value="{{away_score_2}}"</th>
-    						    <th><input type="text" size="1" name="away_score3" value="{{away_score_3}}"</th>
-        						<th><input type="text" size="1" name="away_score4" value="{{away_score_4}}"</th>
-    	    					<th><input type="text" size="1" name="away_score5" value="{{away_score_5}}"</th>
-    		   					<th><input type="text" size="1" name="away_score6" value="{{away_score_6}}"</th>
-    		    				<th><input type="text" size="1" name="away_score7" value="{{away_score_7}}"</th>
+    				    		<th><input type="text" size="1" name="away_score_1" value="{{away_score_1}}"</th>
+    					    	<th><input type="text" size="1" name="away_score_2" value="{{away_score_2}}"</th>
+    						    <th><input type="text" size="1" name="away_score_3" value="{{away_score_3}}"</th>
+        						<th><input type="text" size="1" name="away_score_4" value="{{away_score_4}}"</th>
+    	    					<th><input type="text" size="1" name="away_score_5" value="{{away_score_5}}"</th>
+    		   					<th><input type="text" size="1" name="away_score_6" value="{{away_score_6}}"</th>
+    		    				<th><input type="text" size="1" name="away_score_7" value="{{away_score_7}}"</th>
     			    		</tr>
     				    </tbody>
         			</table>
@@ -126,13 +126,13 @@
     				    <tbody>
         					<tr>
         						<th><input type="text" size="6" name="home_team_name" value="{{home_team_name}}"></th>
-    	    					<th><input type="text" size="1" name="home_score1" value="{{home_score_1}}"</th>
-    		   					<th><input type="text" size="1" name="home_score2" value="{{home_score_2}}"</th>
-    		    				<th><input type="text" size="1" name="home_score3" value="{{home_score_3}}"</th>
-    			    			<th><input type="text" size="1" name="home_score4" value="{{home_score_4}}"</th>
-    				    		<th><input type="text" size="1" name="home_score5" value="{{home_score_5}}"</th>
-    					    	<th><input type="text" size="1" name="home_score6" value="{{home_score_6}}"</th>
-    						    <th><input type="text" size="1" name="home_score7" value="{{home_score_7}}"</th>
+    	    					<th><input type="text" size="1" name="home_score_1" value="{{home_score_1}}"</th>
+    		   					<th><input type="text" size="1" name="home_score_2" value="{{home_score_2}}"</th>
+    		    				<th><input type="text" size="1" name="home_score_3" value="{{home_score_3}}"</th>
+    			    			<th><input type="text" size="1" name="home_score_4" value="{{home_score_4}}"</th>
+    				    		<th><input type="text" size="1" name="home_score_5" value="{{home_score_5}}"</th>
+    					    	<th><input type="text" size="1" name="home_score_6" value="{{home_score_6}}"</th>
+    						    <th><input type="text" size="1" name="home_score_7" value="{{home_score_7}}"</th>
         				</tbody>
     	    		</table>
     
