--- a/static/css/record.css
+++ b/static/css/record.css
@@ -1,12 +1,11 @@
 body {
-    padding-top: 20px;
+    padding-top: 100px;
     padding-bottom: 20px;
 }
 
 .navbar-brand {
 /*    color: #333333 !important;*/
     font-size: 25px;
-    line-height: 25px;
 }
 
 .jumbotron {
@@ -62,13 +61,18 @@ h3 {
     width: 100%;
 }
 
-.center-block{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
+.row-center{
+/*    display: block !important;
+    margin-left: auto !important;
+    margin-right: auto !important;*/
+    text-align: center !important;
 }
 
+.col-center{
+    display: inline-block;
+    float: none;
+
+}
 table th, td{
     text-align: center !important;
 }
