update bootstrap, collapse instruction

--- a/static/css/record.css
+++ b/static/css/record.css
@@ -86,3 +86,14 @@ table th, td{
 .warning{
     color: red;
 }
+
+.table-fix-width{
+    table-layout: fixed !important;
+}
+
+.preview{
+    padding: 10px;
+    border-style: double;
+    border-width: 3px;
+}
+
