--- a/templates/index.html
+++ b/templates/index.html
@@ -65,7 +65,7 @@
     					<div class="form-group">
    							<label class="col-sm-3 control-label">場次</label>
     						<div class="col-sm-9">
-                                <input type="number" class="form-control" name="game_id" value="{{game.game_id}}"><br>
+                                <input type="number" class="form-control" name="game_id" value="{{id}}"><br>
                             </div>
     					</div>
     				</div>
