--- a/static/css/record.css
+++ b/static/css/record.css
@@ -57,8 +57,9 @@ h3 {
 }
 
 .record_table{
-    font-family: "Courier New";
+/*    font-family: "Courier New", "WenQuanYi Zen Hei";*/
     width: 100%;
+    font-size: 9pt;
 }
 
 .row-center{
