--- a/templates/index.html
+++ b/templates/index.html
@@ -105,7 +105,7 @@
     				    </tbody>
         			</table>
     
-                    <textarea class="record_table lined" name="away_record" rows="12">{{away_record}}</textarea>
+                    <textarea class="record_table lined" name="away_record" rows="11">{{away_record}}</textarea>
                 </div>
     
     
@@ -142,9 +142,9 @@
             <br>
             <div class="panel-group" role="tablist">
                 <div class="panel panel-default">
-                    <div class="panel-heading" role="tab" id="collapseListGroupHeading1">
+                    <div class="panel-heading" role="tab" id="collapseListGroupHeading1" data-toggle="collapse" href="#collapseListGroup1" aria-expanded="false" aria-controls="collapseListGroup1">
                         <h4 class="panel-title">
-                            <a class="collapsed" data-toggle="collapse" href="#collapseListGroup1" aria-expanded="false" aria-controls="collapseListGroup1">
+                            <a class="collapsed" >
                                 instruction
                             </a>
                         </h4>
