--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
 
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="https://github.com/phoenix104104/Baseball_Record_Parser">Github</a></li>
+                    <li><a href="https://github.com/phoenix104104/Baseball_Record_Parser" target="blank">Github</a></li>
                 </ul>
             </div>
         </div>
@@ -145,13 +145,43 @@
                     <div class="panel-heading" role="tab" id="collapseListGroupHeading1" data-toggle="collapse" href="#collapseListGroup1" aria-expanded="false" aria-controls="collapseListGroup1">
                         <h4 class="panel-title">
                             <a class="collapsed" >
-                                instruction
+                                記錄寫法
                             </a>
                         </h4>
                     </div>
                     <div id="collapseListGroup1" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingListGroupHeading1">
                         <ul class="list-group">
-                            <li class="list-group-item">blabla</li>
+                            <li class="list-group-item">
+<pre>姓名or背號  守位  PA  PA  PA
+
+PA: (換投/代打/)方位/記錄/註解
+換投: p + 姓名or背號
+代打: r + 背號
+方位: 可以是守備代號(1~10)或L、R、C
+記錄: 1B  一壘安打
+      2B  二壘安打
+      3B  三壘安打
+      HR  全壘打
+      SF  高飛犧牲打
+      BB  保送
+      K   三振
+      G   滾地球出局
+      F   飛球出局
+      DP  雙殺打
+      FC  野手選擇
+      E   失誤
+      IB  違規擊球(Illegal Batted)
+      CB  投手強襲球(combacker)
+      IF  內野高飛必死球(Infield Fly)
+      FO  界外飛球接殺(Foul Out)
+        
+註解: 1~4 打點
+      r   得分
+      x   出局數(目前這個打席造成的出局數，而非球員出局。DP, K, G, F, SF, IB, CB, IF, FO不必寫x，FC和其他情形一定要寫)
+      #   換局
+      !   比賽結束
+      *   補充說明
+</pre></li>      
                         </ul>
                     </div>
                 </div>
