--- a/templates/index.html
+++ b/templates/index.html
@@ -154,11 +154,11 @@
                             <li class="list-group-item">
 <pre>姓名or背號  守位  PA  PA  PA
 
-PA: (換投/代打/)方位/記錄/註解
-換投: p + 姓名or背號
-代打: r + 背號
-方位: 可以是守備代號(1~10)或L、R、C
-記錄: 1B  一壘安打
+PA：(換投/代打/)方位/記錄/註解
+換投：p + 姓名or背號
+代打：r + 背號or背號
+方位：可以是守備代號(1~10)或L、R、C
+記錄：1B  一壘安打
       2B  二壘安打
       3B  三壘安打
       HR  全壘打
@@ -175,12 +175,25 @@ PA: (換投/代打/)方位/記錄/註解
       IF  內野高飛必死球(Infield Fly)
       FO  界外飛球接殺(Foul Out)
         
-註解: 1~4 打點
+註解：1~4 打點
       r   得分
       x   出局數(目前這個打席造成的出局數，而非球員出局。DP, K, G, F, SF, IB, CB, IF, FO不必寫x，FC和其他情形一定要寫)
       #   換局
       !   比賽結束
       *   補充說明
+
+Example:
+
+74  1B  BB      6/F     7/F
+36  2B  DP      8/F     BB/r
+7   3B  1/F/#   9/3B    8/2B/r
+71  SS  6/E/r   1/G/#   8/2B/2
+20  C   6/E     p99/8/F 6/G/!
+24  P   K       6/G
+35  LF  BB      BB
+29  CF  K       1/1B
+21  RF  1/E     6/FC/x#
+77  FF  K/#     1/G
 </pre></li>      
                         </ul>
                     </div>
