--- a/static/css/record.css
+++ b/static/css/record.css
@@ -70,8 +70,8 @@ h3 {
 }
 
 .col-center{
-    display: inline-block;
-    float: none;
+    display: inline-block !important;
+    float: none !important;
 
 }
 table th, td{
@@ -98,3 +98,17 @@ table th, td{
     border-width: 3px;
 }
 
+.fileupload{
+    position: relative;
+    overflow: hidden;
+}
+.fileupload input.upload{
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 0;
+    padding: 0;
+    cursor: pointer;
+    opacity: 0;
+    filter: alpha(opacity=0);
+}
