--- a/templates/index.html
+++ b/templates/index.html
@@ -49,8 +49,20 @@
 
 <!--  content  -->
     <div class="container">
-
-        <form action='/' method="POST">
+        
+        <form action='/' enctype='multipart/form-data' method="POST">
+            <div class="row">
+                <div class="row-center">
+                    <div class="fileUpload btn">
+                        <input id="uploadFileName" size="10" placeholder="Choose File" disabled="disabled">
+                        <input id="uploadBtn" type="file" class='upload' name="upload_file">
+                    </div>
+                    <input type="submit" class="btn btn-info" name = "upload" value = "上傳原始記錄檔">
+                </div>
+            </div>
+        
+        
+        <br>
 
     		<div class="row row-center">
     			<div class="col-xs-3 col-center">	
@@ -210,23 +222,18 @@ Example:
                     </div>
                 </div>
             </div>
+            
             <br>     
+            
 
             <div class="row">
                 <div class="row-center">
-                    <div class="fileupload btn btn-info">
-    			        <span>上傳原始記錄檔</span><input type="file" class="upload" name="file">
-                    </div>
                     <input type="submit" class="btn btn-primary" name="preview" value="預覽表格">
     				<input type="submit" class="btn btn-success" name="download_ptt" value="下載PTT記錄檔">
     				<input type="submit" class="btn btn-warning" name="download_rd" value="下載原始記錄檔">
                 </div>
             </div>
 
-            <br>
-
-            <div class="row row-center">
-            </div>
         </form>
         
         <br>
