--- a/templates/index.html
+++ b/templates/index.html
@@ -58,6 +58,7 @@
                         <span>上傳文字記錄檔</span>
                         <input id="uploadBtn" type="file" class='upload' name="upload_file" onchange='upload()'>
                     </div>
+                    <input type="submit" class="btn btn-danger" name="reset" value="重設">
                 </div>
             </div>
         
